kubernetes/ckad_cert_exercises/services/service-definition-nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: my-nodeport-service  
spec:
  type: NodePort
  selector:
    app: my-app
  ports:
    - port: 80 # The port that the service will expose \ Virtual server port
      targetPort: 8080 # The port on which the service is exposed
      nodePort: 30007 # Optional, if not specified, Kubernetes will assign a port from the default range (30000-32767)
  selector:
    app: my-app # This selector will match the pods with the label app=my-app
